[FIX] (IE-only) Prevent image in the promo box to stretch vertically.

--- a/src/assets/toolkit/styles/5-objects/_objects.icons.scss
+++ b/src/assets/toolkit/styles/5-objects/_objects.icons.scss
@@ -105,7 +105,7 @@ $icon-play-triangle-ratio: 1.1; // Ratio between width and height of the triangl
 .link-external {
   @include extend-icon-after( external ) {
     vertical-align: 0;
-    margin-right: $gap-small;
+    margin-left: _em( $gap-small );
   }
 }
 
